<?xml version="1.0"?>
<package>
  <name>dvs_calib_gui</name>
  <version>0.0.0</version>
  <description>The dvs_calib_gui package</description>
  <maintainer email="mueggler@ifi.uzh.ch">eliasm</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>