<?xml version="1.0"?>
<package>
  <name>dvs_calibration</name>
  <version>0.0.0</version>
  <description>The dvs_calibration package</description>
  <maintainer email="mueggler@ifi.uzh.ch">Elias Mueggler</maintainer>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
  </export>
</package>
