<?xml version="1.0"?>
<package>
  <name>dvs_calibration_gui</name>
  <version>0.0.0</version>
  <description>The dvs_calibration_gui package</description>
  <maintainer email="elias.mueggler@gmail.com">Matthias Fässler </maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
