<?xml version="1.0"?>
<package>
  <name>dvs_driver</name>
  <version>0.0.0</version>
  <description>The dvs_driver package</description>
  <maintainer email="mueggler@ifi.uzh.ch">Elias Mueggler</maintainer>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
