<?xml version="1.0"?>
<package>
  <name>dvs_file_writer</name>
  <version>0.0.0</version>
  <description>The dvs_file_writer package</description>
  <maintainer email="mueggler@ifi.uzh.ch">Elias Mueggler</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>dvs_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>dvs_msgs</run_depend>

  <export>
  </export>
</package>
