<?xml version="1.0"?>
<package>
  <name>dvs_msgs</name>
  <version>0.0.0</version>
  <description>The dvs_msgs package</description>
  <maintainer email="mueggler@ifi.uzh.ch">Elias Mueggler</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbag</run_depend>

  <export>
    <rosbag migration_rule_file="EventArrayRule.bmr"/>
  </export>
</package>
