<?xml version="1.0"?>
<package format="2">
  <name>dvs_ros_driver</name>
  <version>0.0.0</version>
  <description>The dvs_ros_driver package</description>
  <maintainer email="mueggler@ifi.uzh.ch">Elias Mueggler</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dvs_msgs</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>camera_info_manager</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/dvs_ros_driver_nodelet.xml"/>
  </export>

</package>
