<?xml version="1.0"?>
<package format="2">
  <name>libcaer_catkin</name>
  <version>0.0.0</version>
  <description>The libcaer_catkin package</description>
  <maintainer email="mueggler@ifi.uzh.ch">Elias Mueggler</maintainer>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
</package>
